; ModuleID = '/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xmlrpc.c_XMLRPC_CreateValueDouble.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/xmlrpc/libxmlrpc/extr_xmlrpc.c_XMLRPC_CreateValueDouble.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @XMLRPC_CreateValueDouble(i8* %0, double %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca double, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store double %1, double* %4, align 8
  %6 = call i64 (...) @XMLRPC_CreateValueEmpty()
  store i64 %6, i64* %5, align 8
  %7 = load i64, i64* %5, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %20

9:                                                ; preds = %2
  %10 = load i64, i64* %5, align 8
  %11 = load double, double* %4, align 8
  %12 = call i32 @XMLRPC_SetValueDouble(i64 %10, double %11)
  %13 = load i8*, i8** %3, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %9
  %16 = load i64, i64* %5, align 8
  %17 = load i8*, i8** %3, align 8
  %18 = call i32 @XMLRPC_SetValueID(i64 %16, i8* %17, i32 0)
  br label %19

19:                                               ; preds = %15, %9
  br label %20

20:                                               ; preds = %19, %2
  %21 = load i64, i64* %5, align 8
  ret i64 %21
}

declare dso_local i64 @XMLRPC_CreateValueEmpty(...) #1

declare dso_local i32 @XMLRPC_SetValueDouble(i64, double) #1

declare dso_local i32 @XMLRPC_SetValueID(i64, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
